--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tonejs/midi": "^2.0.28",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -19,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
