--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,12 +19,15 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "tone": "^15.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jquery": "^3.5.32",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
