--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@magenta/music": "^1.23.1",
     "@tonejs/midi": "^2.0.28",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.461.0",
+    "midi-writer-js": "^3.1.1",
     "moment": "^2.30.1",
+    "pitchfinder": "^2.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-icons": "^5.4.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.15",
@@ -28,6 +33,7 @@
     "@eslint/js": "^9.13.0",
     "@types/jquery": "^3.5.32",
     "@types/node": "^22.10.2",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
